--- a/sep08/css/style.css
+++ b/sep08/css/style.css
@@ -1,34 +1,50 @@
 body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+header {
+  height: 500px;
   background-image: url(../img/background.jpg);
+  background-position: center;
+  background-size: cover;
+  color: white;
 }
-img {
-  float: left;
+h1, ul {
+  margin: 0;
+  display: inline-block;
 }
-header nav ul h1 li {
- float: left;
- margin: 0;
+h1 {
+  font-size: 50px;
+  letter-spacing: -5px;
 }
-header li {
-display: inline-block;
-  width: 15%;
+h1 a {
+  text-decoration: none;
+  color: inherit;
+}
+h1 span {
+  color: hsl(194, 84%, 66%);
+}
+ul {
   float: right;
 }
-section {
-position: absolute;
-left: 29%;
-top: 50%;
+ul li {
+  display: inline-block;
+  line-height: 50px;
+  padding: 0 20px;
+  margin-left: 10px;
+  /*padding: 20px 0;*/
 }
-section div h1 {
-  color: white;
+ul li:hover {
+  cursor: pointer;
 }
-section div p {
-  color: white;
+ul li:hover,
+.active {
+  background-color: hsl(194, 84%, 66%);
+  border-top-right-radius: 20px 50%;
+  border-bottom-right-radius: 20px 50%;
+  border-top-left-radius: 20px 50%;
+  border-bottom-left-radius: 20px 50%;
 }
-
-
-
-
-
 
 
 
