--- a/octo12/css/style.css
+++ b/octo12/css/style.css
@@ -39,6 +39,7 @@ form legend span {
   position: relative;
   top: 25px;
   transition: all 250ms ease-in-out;
+  align-self: flex-start;
 }
 form legend span.placeholder {
   top: 0px;
