--- a/octo19-berrockshop/css/style.css
+++ b/octo19-berrockshop/css/style.css
@@ -19,12 +19,86 @@
   font-weight:  400;
 }
 body {
-  margin: 0;
+margin: 3vw 14vw;
+background-color: hsla(360, 100%, 20%, 1);
 }
-#main_page {
+header {
   display: flex;
-}
-#main_page > img{
+  margin: 0;
+  justify-content: center;
   border: 5px solid black;
-  justify-content: flex-end;
+}
+header div{
+  background-color: white;
+  width: 400px
+}
+header div h1 {
+  font-family: 'Fraktur' , sans-serif;
+  float: left;
+  font-size: 50px;
+  width: 100%;
+  text-align: center;
+  color: hsl(61, 73%, 53%);
+ text-shadow:
+  -1px -1px 0 #000,
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+img{
+  width: 100%
+}
+nav {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+
+}
+ul {
+  display: flex;
+
+}
+nav ul li {
+  display: flex;
+  justify-content: space-between;
+
+
+}
+nav ul li a {
+  font-family: 'Fraktur' , sans-serif;
+  display: flex;
+  text-decoration: none;
+  text-shadow:
+   -1px -1px 0 hsla(0, 100%, 20%, 1),
+    1px -1px 0 hsla(0, 100%, 20%, 1),
+    -1px 1px 0 hsla(0, 100%, 20%, 1),
+     1px 1px 0 hsla(0, 100%, 20%, 1);
+     font-size: 25px;
+     padding: 10px;
+     color: white;
+justify-content: space-between;
+}
+#main {
+  background-color: white;
+}
+#body  h3 {
+  font-family: 'Fraktur' , sans-serif;
+  text-decoration: none;
+  text-shadow:
+   -1px -1px 0 hsla(0, 100%, 20%, 1),
+    1px -1px 0 hsla(0, 100%, 20%, 1),
+    -1px 1px 0 hsla(0, 100%, 20%, 1),
+     1px 1px 0 hsla(0, 100%, 20%, 1);
+     font-size: 25px;
+     padding: 10px;
+     color: white;
+}
+
+#body div aside:last-of-type{
+  display: flex;
+  flex-direction: column;
+}
+#body{
+  display: flex;
+    background-color: white;
 }
