--- a/octo26-berrockshop/css/style.css
+++ b/octo26-berrockshop/css/style.css
@@ -26,11 +26,15 @@ html {
   background-color: hsl(0, 100%, 20%);
 }
 body {
-  max-width: 750px;
+  max-width: 775px;
   display: inline-block;
   background-color: hsl(60, 100%, 97%);
-  border-top: 10px solid hsl(0, 100%, 16%);
+  border-top: 15px solid hsl(0, 100%, 16%);
+  border-bottom: 15px solid hsl(0, 100%, 16%);
   box-shadow: 0 0 0 1px black;
+  font-family: sans-serif;
+  font-size: .8em;
+  line-height: 1.25;
 }
 hr {
   background-color: hsl(0, 100%, 97%);
@@ -70,15 +74,25 @@ h2, h3, nav a {
       -1px -1px .25px hsl(0, 100%, 16%);
       font-weight: 500;
 }
+h2 {
+  font-size: 200%;
+}
 h3 {
+  font-size: 175%;
   color: hsl(48, 100%, 41%);
+  background-color: hsl(0, 100%, 97%);
+  margin: 0;
+  padding: 0 5px;
+  position: absolute;
+  left: 10px;
+  top: 0;
+  transform: translateY(-50%);
 }
 header img {
   float: left;
   border-left: 4px solid black;
 }
 main {
-  border: 4px solid black;
   text-align: left;
 }
 nav {
@@ -118,17 +132,70 @@ nav a:hover {
       -1px -1px .25px hsl(0, 100%, 16%),
       -1px -1px 10px hsl(0, 100%, 16%);
 }
-
 section {
-  width: 65%;
+  width: 60%;
   box-sizing: border-box;
   float: left;
-  padding: 0 50px;
+  padding: 0 25px 25px 50px;
+}
+section img {
+  -webkit-shape-outside: circle();
+  shape-outside: circle();
+  width: 150px;
+}
+section img:nth-of-type(odd){
+  float: right;
+}
+section img:nth-of-type(even){
+  float: left;
 }
 aside {
   text-align: center;
-  width: 35%;
+  width: 40%;
   box-sizing: border-box;
   float: right;
-  padding: 0 50px;
+  padding: 0 50px 25px 25px;
+}
+aside div {
+  border: 2px solid hsl(0, 0%, 30%);
+  border-radius: 10px;
+  position: relative;
+  padding: 10px;
+  margin-top: 32px;
+}
+aside img {
+  margin-top: 32px;
+}
+aside div:nth-child(3) p:first-of-type,
+aside div:nth-child(4) p:first-of-type {
+  text-align: left;
+}
+aside div table {
+  width: 100%;
+  margin: 15px 0;
+}
+#menu section {
+  width: 100%;
+}
+#menu h3 {
+  color: white;
+}
+#menu .fb {
+  display: flex;
+  flex-wrap: wrap;
+}
+#menu .fb div {
+  width: calc(50% - 50px);
+  margin-left: 25px;
+  margin-right: 25px;
+  box-sizing: border-box;
+  float: left;
+  border: 2px solid hsl(0, 0%, 30%);
+  border-radius: 10px;
+  position: relative;
+  padding: 10px;
+  margin-top: 32px;
+}
+#menu .fb div:nth-of-type(3n+1){
+  width: calc(100% - 50px);
 }
