--- a/octo27-berrockshop/css/style.css
+++ b/octo27-berrockshop/css/style.css
@@ -237,3 +237,46 @@ article header {
   line-height: 1.75;
   margin-left: auto;
 }
+#contact section {
+  padding: 0 0 25px;
+  width: 100%;
+  text-align: center;
+}
+i.fa {
+  font-size: 200%;
+  color: white;
+  text-shadow:
+      1px 1px .25px hsl(0, 100%, 16%),
+      1px 1px 10px hsl(0, 100%, 16%),
+      -1px 1px .25px hsl(0, 100%, 16%),
+      -1px 1px 10px hsl(0, 100%, 16%),
+      1px -1px .25px hsl(0, 100%, 16%),
+      1px -1px 10px hsl(0, 100%, 16%),
+      -1px -1px .25px hsl(0, 100%, 16%),
+      -1px -1px 10px hsl(0, 100%, 16%);
+}
+#contact .grad {
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+form {
+  display: inline-flex;
+  flex-direction: column;
+}
+form label {
+  display: flex;
+  text-align: left;
+  margin-bottom: 5px;
+}
+form label span {
+  width: 75px;
+  text-align: right;
+  padding-right: 5px;
+}
+form input[type="submit"]{
+  align-self: flex-start;
+  margin-left: 80px;
+  border: 1px solid hsl(0, 100%, 16%);
+  font-weight: bold;
+  background-color: hsl(60, 100%, 97%);
+}
