--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,3 +1,9 @@
+html {
+  background-image: url(../img/grass.jpeg);
+  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 body {
   margin: 0;
   padding: 0;
@@ -5,31 +11,61 @@ body {
 header nav {
   border-bottom: 2px solid black;
 }
+header nav ul {
+  text-align: center;
+}
 header nav ul li {
   display: inline-block;
 }
 a {
   text-decoration: none;
-  color: hsl(112, 74%, 24%);
+  color: white
 }
 main {
   margin: 0;
   padding: 0;
 }
-section {
-  margin-left: 10px;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  width: 10%;
+h1 {
+  text-align: center;
 }
-section div img {
-  position: relative;
-  display: flex;
-  width: 75%;
+section {
+  width: 50%;
+  float: left;
+  margin-left: 10px;
+  /*border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  width: 10%;*/
+}
+.picture {
+  float: left;
+  width: 20%;
+  border-radius: 50%;
+}
+section div h3 {
+  text-align: left;
+  margin-top: 0;
 }
 section div p {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+}
+aside {
+  width: 49%;
+  float: right;
+  /*border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;*/
+}
+main::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
