--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,3 +1,4 @@
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 html {
   background-image: url(../img/grass.jpeg);
   color: white;
@@ -21,6 +22,9 @@ a {
   text-decoration: none;
   color: white
 }
+a:hover {
+  background-color: black;
+}
 main {
   margin: 0;
   padding: 0;
@@ -29,18 +33,32 @@ h1 {
   text-align: center;
 }
 section {
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  /*width: 50%;
   float: left;
-  margin-left: 10px;
+  margin-left: 10px;*/
   /*border-top: 1px solid white;
   border-left: 1px solid white;
   border-right: 1px solid white;
   border-bottom: 1px solid white;
   width: 10%;*/
 }
+.primo {
+  display: flex;
+  justify-content: space-around;
+}
+.skills {
+  border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  width: 10%;
+}
 .picture {
-  float: left;
-  width: 20%;
+  display: flex;
+  justify-content: center;
+  width: 10%;
   border-radius: 50%;
 }
 section div h3 {
@@ -53,17 +71,35 @@ section div p {
   margin: 0;
 }
 aside {
-  width: 49%;
-  float: right;
+  display: flex;
+  justify-content: center;
+  /*width: 49%;
+  float: right;*/
   /*border-top: 1px solid white;
   border-left: 1px solid white;
   border-right: 1px solid white;
   border-bottom: 1px solid white;*/
 }
-main::after {
+/*main::after {
   content: '';
   display: block;
   clear: both;
+}*/
+i {
+  height: 10px;
+  width: 5px;
+  color: white;
+}
+.move {
+  text-align: center;
+}
+.candy {
+  display: flex;
+  justify-content: space-around;
+}
+form {
+  display: inline-flex;
+  flex-direction: column;
 }
 footer {
   display: flex;
