--- a/moblo/css/style.css
+++ b/moblo/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css;
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -85,6 +86,10 @@ span {
 }
 .font {
   font-size: 48px;
+}
+i {
+  color: #f25f43;
+  font-size: 
 }
 h2, h4 {
   margin: 0;
