--- a/jan27-editorial/css/style.scss
+++ b/jan27-editorial/css/style.scss
@@ -9,7 +9,6 @@ body{
 }
 
 
-
 nav section{
   display: flex;
   align-items: center;
@@ -214,5 +213,10 @@ main{
 }
 
 .right img{
+  width: 500px;
+}
+
+.scale:hover{
+  transform: scale(1.1);
   width: 500px;
 }
