--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 html {
-  background-image: url(../img/cosmos.jpg);
+  background-image: url(img/cosmos.jpg);
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
