--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  color: black;
 }
 header nav {
   border-bottom: 2px solid black;
@@ -117,7 +118,7 @@ form {
 footer {
   display: flex;
   justify-content: center;
-  color: black;
+  color: white;
 }
 
 
