img, style, works, Pokemon gold is best

--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ section {
   margin-left: 47%;
 }
 .work1 {
-  /*width: 15px;
-  height: 10px;*/
+  width: 15px;
+  height: 10px;
 }
 section div h3 {
   text-align: left;
