img, style, works, Pokemon gold is best

--- a/style.css
+++ b/style.css
@@ -68,8 +68,11 @@ section {
   margin-left: 47%;
 }
 .work1 {
-  width: 15px;
-  height: 10px;
+  /*width: 15px;
+  height: 10px;*/
+}
+.make_small {
+  height: 50%;
 }
 section div h3 {
   text-align: left;
